# Lift

./: CMakeLists.txt  README.md
Src/: main.cpp  settings.txt
Src/Data/: Data.h
Src/Floor/: Floor.cpp  Floor.h
Src/Lift/: Lift.cpp  Lift.h
Src/Person/: Person.cpp  Person.h
Src/Person/Female/: Female.cpp  Female.h
Src/Person/Kid/: Kid.cpp  Kid.h
Src/Person/Male/: Male.cpp  Male.h
Src/Settings/: Settings.cpp  Settings.h
Src/Simulator/: Simulator.cpp  Simulator.h
